<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".EditActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/category_product"
            style="@style/CategoryStyle" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:paddingLeft="@dimen/edit_text_padding"
            android:paddingStart="@dimen/edit_text_padding"
            android:paddingRight="0dp"
            android:paddingEnd="0dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_product_name"
                android:hint="@string/edittext_product_name"
                android:inputType="textCapWords"
                style="@style/TextEditFieldStyle" />

            <EditText
                android:id="@+id/edit_price"
                android:hint="@string/edittext_price"
                android:inputType="numberDecimal"
                style="@style/TextEditFieldStyle" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edit_quantity"
                    android:hint="@string/edittext_quantity"
                    android:inputType="number"
                    style="@style/TextEditFieldStyle"
                    android:layout_width="0dp"
                    android:layout_weight="10"/>

                <ImageButton
                    android:id="@+id/increase_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/EditButton"
                    android:src="@drawable/ic_add_inventory" />

                <ImageButton
                    android:id="@+id/decrease_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/EditButton"
                    android:src="@drawable/ic_subtract_inventory" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/category_supplier"
            style="@style/CategoryStyle" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:paddingLeft="@dimen/edit_text_padding"
            android:paddingStart="@dimen/edit_text_padding"
            android:paddingRight="0dp"
            android:paddingEnd="0dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_supplier_name"
                android:hint="@string/edittext_supplier_name"
                android:inputType="textCapWords"
                style="@style/TextEditFieldStyle" />

            <EditText
                android:id="@+id/edit_supplier_phone"
                android:hint="@string/edittext_supplier_phone"
                android:inputType="number"
                style="@style/TextEditFieldStyle" />

            <Button
                android:id="@+id/call_supplier"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/EditButton"
                android:text="@string/call_supplier"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>